--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,8 +8,10 @@ readme = "README.md"
 packages = [{include = "profesia_scraper"}]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = "^3.10"
 playwright = "^1.28.0"
+pandas = "^1.5.2"
+tqdm = "^4.64.1"
 
 
 [build-system]
